--- a/index.html
+++ b/index.html
@@ -5713,7 +5713,26 @@ Udon Ise (伊勢ウドン, Ise Udon) is a member of Team Ebisu, consisting of hi
          </div>
        <!--card end-->	
 
+<!--juzo biwa start-->
+
+<!-- card start-->
+<div class="card mb-3 card-bg my-4" style="max-width: 100%;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+           <img src="Images/J3F_Biwa.png" alt="Jūzō Biwa" height="390px" width="300px">  
+        </div>
+    <div class="col-md-8">
+       <div class="card-body">
+          <h2 class="card-title">Jūzō Biwa</h2>
+          <p class="card-text">Jūzō Biwa (枇杷十蔵, Biwa Jūzō) was a jōnin from Kirigakure and a member of the Seven Ninja Swordsmen of the Mist. In the anime, Jūzō deserted his village and became a member of Akatsuki, where he was partnered with Itachi Uchiha.</p>
+      </div>
+   </div>
+ </div>
+</div>
+<!--card end-->	
+
 <!--Yugito ni end-->
+
    <!--contrib tion  -->
    
 
